- Added chapter numbering.  - Added SeeAlsoExternal tag support.  - Language version checker now works.  - Changed the "navigation" config option values from "flat" and "tree" to "tree" and "book".  - PL docs: chapter about multilingual docs written.  - EN docs: first chapters translated.

--- a/languages/en/general.txt
+++ b/languages/en/general.txt
@@ -1,3 +1,4 @@
 table_of_contents = "Table of contents"
 documentation = "User manual"
 generated_in = "Generated: %s"
+doc_license = "Documentation license"
