--- a/languages/pl/general.txt
+++ b/languages/pl/general.txt
@@ -1,3 +1,4 @@
 table_of_contents = "Spis treści"
 documentation = "Dokumentacja"
 generated_in = "Wygenerowano %s"
+doc_license = "Licencja dokumentacji"
