- English manual completed. - Minor fixes in Polish manual. - Minor fixes in xhtml output. - Readme update and copyright issues checked.

--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -1,4 +1,5 @@
 status = "Status"
+reference = "Wywołanie"
 obj_extends = "Klasa bazowa"
 obj_implements = "Implementuje"
 obj_extended = "Klasy pochodne"
