[TF_0.1] New tags: Throws, Visibility, VCSKeywords [TF_0.1] CLI argument style changed [TF_0.1] Documentation creator added

--- a/languages/en/tags.txt
+++ b/languages/en/tags.txt
@@ -3,7 +3,10 @@ reference = "Reference"
 obj_extends = "Extends"
 obj_implements = "Implements"
 obj_extended = "Extended by"
+obj_throws = "Thrown exceptions"
 version_since = "Since version"
 version_to = "To version"
 author = "Author"
 reference = "Reference"
+visibility = "Visibility"
+versionControlInfo = "Version control"
