--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -3,7 +3,10 @@ reference = "Wywołanie"
 obj_extends = "Klasa bazowa"
 obj_implements = "Implementuje"
 obj_extended = "Klasy pochodne"
+obj_throws = "Rzucane wyjątki"
 version_since = "Od wersji"
 version_to = "Do wersji"
 author = "Autor"
 reference = "Wywołanie"
+visibility = "Widoczność"
+versionControlInfo = "Kontrola wersji"
