[0.1] New tag manager with tag validation [0.1] xhtml output redesigned to use the tag manager. [0.1] New tags: MultiExtends, Construct, Type, Returns, Arguments, FeatureInformation, Appendix [0.1] Support for appendices added. [0.1] Sh script added for launching TF on Unix systems

--- a/languages/en/general.txt
+++ b/languages/en/general.txt
@@ -2,3 +2,6 @@ table_of_contents = "Table of contents"
 documentation = "User manual"
 generated_in = "Generated: %s"
 doc_license = "Documentation license"
+
+period_since = "since"
+period_to = "to"
