--- a/languages/en/tags.txt
+++ b/languages/en/tags.txt
@@ -1,3 +1,4 @@
+appendix = "Appendix"
 status = "Status"
 reference = "Reference"
 obj_extends = "Extends"
@@ -6,7 +7,15 @@ obj_extended = "Extended by"
 obj_throws = "Thrown exceptions"
 version_since = "Since version"
 version_to = "To version"
+versions = "Versions"
 author = "Author"
 reference = "Reference"
 visibility = "Visibility"
-versionControlInfo = "Version control"
+version_control_info = "Version control"
+type = "Type"
+construct = "Construct"
+returns = "Returned value"
+arg_list = "Argument list"
+arg_name = "Name"
+arg_type = "Type"
+arg_desc = "Description"
