--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -1,3 +1,4 @@
+appendix = "Dodatek"
 status = "Status"
 reference = "Wywołanie"
 obj_extends = "Klasa bazowa"
@@ -6,7 +7,15 @@ obj_extended = "Klasy pochodne"
 obj_throws = "Rzucane wyjątki"
 version_since = "Od wersji"
 version_to = "Do wersji"
+versions = "Wersje"
 author = "Autor"
 reference = "Wywołanie"
 visibility = "Widoczność"
-versionControlInfo = "Kontrola wersji"
+version_control_info = "Kontrola wersji"
+type = "Typ"
+construct = "Konstrukcja"
+returns = "Zwracana wartość"
+arg_list = "Lista argumentów"
+arg_name = "Nazwa"
+arg_type = "Typ"
+arg_desc = "Opis"
