[0.1] Modified xhtml_single to follow the newest changes [0.1] Compare command now works

--- a/languages/en/general.txt
+++ b/languages/en/general.txt
@@ -1,4 +1,4 @@
-table_of_contents = "Table of contents"
+table_of_contents = "Table of Contents"
 documentation = "User manual"
 generated_in = "Generated: %s"
 doc_license = "Documentation license"
