[0.1] New tag added: ImplementedBy [0.1] Fixed some problems in the new tag manager [0.1] Added multilinguality to featureInformation [0.1] Preparing to optimize the tag manager.

--- a/languages/en/tags.txt
+++ b/languages/en/tags.txt
@@ -4,6 +4,7 @@ reference = "Reference"
 obj_extends = "Extends"
 obj_implements = "Implements"
 obj_extended = "Extended by"
+obj_implemented = "Implemented by"
 obj_throws = "Thrown exceptions"
 version_since = "Since version"
 version_to = "To version"
