--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -4,6 +4,7 @@ reference = "Wywołanie"
 obj_extends = "Klasa bazowa"
 obj_implements = "Implementuje"
 obj_extended = "Klasy pochodne"
+obj_implemented = "Klasy implementujące"
 obj_throws = "Rzucane wyjątki"
 version_since = "Od wersji"
 version_to = "Do wersji"
