[0.1] Content templates replace the featureInformation.ini file. [0.1] Fixed the sources to make TypeFriendly work with PHP compiled with buggy GCC 4.3. [0.1] Extending the user manual. [0.1] Initial Slovak translation added [0.1] New configuration option: projectType

--- a/languages/en/general.txt
+++ b/languages/en/general.txt
@@ -1,7 +1,14 @@
+; Translations of the main messages used across the book.
+; Translation authors:
+; - Tomasz Jędrzejewski <http://www.zyxist.com>
+
 table_of_contents = "Table of Contents"
-documentation = "User manual"
+documentation = "Documentation"
+manual = "User manual"
+book = "Book"
+article = "Article"
 generated_in = "Generated: %s"
-doc_license = "Documentation license"
+doc_license = "Available under the terms of license"
 
 period_since = "since"
 period_to = "to"
