--- a/languages/en/navigation.txt
+++ b/languages/en/navigation.txt
@@ -1,3 +1,8 @@
+; The navigation messages
+; The translations of available programming constructs
+; Translation authors:
+; - Tomasz Jędrzejewski <http://www.zyxist.com>
+
 next = "Next"
 prev = "Previous"
 to_up = "Up"
