--- a/languages/pl/general.txt
+++ b/languages/pl/general.txt
@@ -1,7 +1,14 @@
+; Translations of the main messages used across the book.
+; Translation authors:
+; - Tomasz Jędrzejewski <http://www.zyxist.com>
+
 table_of_contents = "Spis treści"
 documentation = "Dokumentacja"
+manual = "Podręcznik użytkownika"
+book = "Książka"
+article = "Artykuł"
 generated_in = "Wygenerowano %s"
-doc_license = "Licencja dokumentacji"
+doc_license = "Dostępne na licencji"
 
 period_since = "od"
 period_to = "do"
