--- a/languages/pl/navigation.txt
+++ b/languages/pl/navigation.txt
@@ -1,3 +1,8 @@
+; The navigation messages
+; The translations of available programming constructs
+; Translation authors:
+; - Tomasz Jędrzejewski <http://www.zyxist.com>
+
 next = "Następny"
 prev = "Poprzedni"
 to_up = "Do góry"
