[0.1] Fixed problem with selecting project type in the new project wizard. [0.1] Small update in Slovak translation.

--- a/languages/sk/constructs.txt
+++ b/languages/sk/constructs.txt
@@ -21,7 +21,7 @@ package = "Balíček"
 constructor = "Konstruktor"
 destructor = "Deštruktor"
 magic_method = "Magická metóda"
-namespace = "Namespace"
+namespace = "Menný priestor"
 datatype = "Data type"
 structure = "Structure"
 macro = "Macro"
