--- a/languages/pl/general.txt
+++ b/languages/pl/general.txt
@@ -1,3 +1,4 @@
+; $Id$
 ; Translations of the main messages used across the book.
 ; Translation authors:
 ; - Tomasz Jędrzejewski <http://www.zyxist.com>
@@ -7,8 +8,8 @@ documentation = "Dokumentacja"
 manual = "Podręcznik użytkownika"
 book = "Książka"
 article = "Artykuł"
-generated_in = "Wygenerowano %s"
-doc_license = "Dostępne na licencji"
+generated_in = "Wygenerowano: %s"
+doc_license = "Dostępne na licencji: %s"
 
 period_since = "od"
 period_to = "do"
