[Tf_0.1] Several new tags added. [Tf_0.1] Several new constructs added. [Tf_0.1] English, Polish and Slovak translations updated. [Tf_0.1] Fixed #111

--- a/languages/en/tags.txt
+++ b/languages/en/tags.txt
@@ -11,6 +11,9 @@ obj_implements = "Implements"
 obj_extended = "Extended by"
 obj_implemented = "Implemented by"
 obj_throws = "Thrown exceptions"
+obj_mixins = "Used mixins"
+obj_traits = "Used traits"
+part_of = "Part of"
 version_since = "Since version"
 version_to = "To version"
 versions = "Versions"
@@ -28,3 +31,12 @@ arg_desc = "Description"
 file = "File"
 files = "Files"
 namespace = "Namespace"
+package = "Package"
+time_complexity = "Time complexity"
+memory_complexity = "Memory complexity"
+
+start_conditions = "Start conditions"
+end_conditions = "End conditions"
+side_effects = "Side effects"
+limitations = "Limitations"
+datasources = "Data sources"
