--- a/languages/pl/constructs.txt
+++ b/languages/pl/constructs.txt
@@ -22,3 +22,16 @@ namespace = "Przestrzeń nazw"
 datatype = "Typ danych"
 structure = "Struktura"
 macro = "Makro"
+final_method = "Metoda finalna"
+optional_method = "Metoda opcjonalna do zaimplementowania przez programistę"
+final static method = "Finalna metoda statyczna"
+final accessor method = "Finalna metoda dostępowa"
+component = "Komponent"
+file = "Plik"
+mixin = "Domieszka"
+trait = "Cecha"
+exception_class = "Klasa wyjątku"
+internal_class = "Klasa wewnętrzna"
+executable = "Plik wykonywalny"
+script = "Skrypt"
+final_class = "Klasa finalna"
