--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -11,6 +11,9 @@ obj_implements = "Implementuje"
 obj_extended = "Klasy pochodne"
 obj_implemented = "Klasy implementujące"
 obj_throws = "Rzucane wyjątki"
+obj_mixins = "Użyte domieszki"
+obj_traits = "Użyte cechy"
+part_of = "Stanowi część"
 version_since = "Od wersji"
 version_to = "Do wersji"
 versions = "Wersje"
@@ -28,3 +31,12 @@ arg_desc = "Opis"
 file = "Plik"
 files = "Pliki"
 namespace = "Przestrzeń nazw"
+package = "Pakiet"
+time_complexity = "Złożoność czasowa"
+memory_complexity = "Złożoność pamięciowa"
+
+start_conditions = "Warunki początkowe"
+end_conditions = "Warunki końcowe"
+side_effects = "Efekty uboczne"
+limitations = "Ograniczenia"
+datasources = "Źródła danych"
