--- a/languages/sk/tags.txt
+++ b/languages/sk/tags.txt
@@ -30,3 +30,6 @@ arg_desc = "Description"
 file = "Súbor"
 files = "Súbory"
 namespace = "Menný priestor"
+package = "Balík"
+time_complexity = "Časová zložitosť"
+memory_complexity = "Pamäťová zložitosť"
