--- a/languages/en/constructs.txt
+++ b/languages/en/constructs.txt
@@ -22,3 +22,16 @@ namespace = "Namespace"
 datatype = "Data type"
 structure = "Structure"
 macro = "Macro"
+final_method = "Final method"
+optional_method = "Optional method for implementation by the programmer"
+final static method = "Final static method"
+final accessor method = "Final accessor method"
+component = "Component"
+file = "File"
+mixin = "Mixin"
+trait = "Trait"
+exception_class = "Exception class"
+internal_class = "Internal class"
+executable = "Executable file"
+script = "Script file"
+final_class = "Final class"
