Adding Stability tag.

--- a/languages/en/tags.txt
+++ b/languages/en/tags.txt
@@ -33,6 +33,13 @@ namespace = "Namespace"
 package = "Package"
 time_complexity = "Time complexity"
 memory_complexity = "Memory complexity"
+stability = "Stability"
+stability_experimental = "experimental"
+stability_dev = "development"
+stability_alpha = "alpha"
+stability_beta = "beta"
+stability_stable = "stable"
+stability_unknown = "unknown"
 
 start_conditions = "Start conditions"
 end_conditions = "End conditions"
