--- a/languages/pl/tags.txt
+++ b/languages/pl/tags.txt
@@ -33,6 +33,13 @@ namespace = "Przestrzeń nazw"
 package = "Pakiet"
 time_complexity = "Złożoność czasowa"
 memory_complexity = "Złożoność pamięciowa"
+stability = "Stabilność"
+stability_experimental = "eksperymentalna"
+stability_dev = "rozwojowa"
+stability_alpha = "alfa"
+stability_beta = "beta"
+stability_stable = "stabilna"
+stability_unknown = "nieznana"
 
 start_conditions = "Warunki początkowe"
 end_conditions = "Warunki końcowe"
