--- a/languages/sk/tags.txt
+++ b/languages/sk/tags.txt
@@ -32,3 +32,17 @@ namespace = "Menný priestor"
 package = "Balík"
 time_complexity = "Časová zložitosť"
 memory_complexity = "Pamäťová zložitosť"
+
+stability = "Stabilnosť"
+stability_experimental = "experimentálna"
+stability_dev = "pracovná"
+stability_alpha = "alfa"
+stability_beta = "beta"
+stability_stable = "stabilná"
+stability_unknown = "neznáma"
+
+start_conditions = "Start conditions"
+end_conditions = "End conditions"
+side_effects = "Side effects"
+limitations = "Limitations"
+datasources = "Data sources"
