--- a/languages/pt-BR/tags.txt
+++ b/languages/pt-BR/tags.txt
@@ -27,3 +27,20 @@ arg_desc = "Descrição"
 file = "Arquivo"
 files = "Arquivos"
 namespace = ""Espaço de nome"
+
+package = "Package"
+time_complexity = "Time complexity"
+memory_complexity = "Memory complexity"
+stability = "Stability"
+stability_experimental = "experimental"
+stability_dev = "development"
+stability_alpha = "alpha"
+stability_beta = "beta"
+stability_stable = "stable"
+stability_unknown = "unknown"
+
+start_conditions = "Start conditions"
+end_conditions = "End conditions"
+side_effects = "Side effects"
+limitations = "Limitations"
+datasources = "Data sources"
